--- a/package.json
+++ b/package.json
@@ -7,4 +7,8 @@
     "url": "?.git"
   },
   "author": "Carlos Parada",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7"
+  }
 }
